--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
 	<head>
     	<meta charset="UTF-8">
+    	<link rel="stylesheet" type="text/css" href="styls.css">
     	<font face="Century Gothic">
     	<title>
-    		Задание №1
+    		Задание №2
 		</title>
-		<h2>&nbsp &nbsp Задание 1</h2>
+		
 	</head>
 	<body>
 		
