--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 	<head>
     	<meta charset="UTF-8">
     	<link rel="stylesheet" type="text/css" href="styls.css">
-    	<font face="Century Gothic">
-    	<title>
-    		Задание №2
-		</title>
-		
+    	<title>Задание №2</title>
 	</head>
 	<body>
-		
+		<div class="cap">
+			
+		</div>
 		<ol>
 			<li><a href="http://example.com">Абсолютная гиперссылка на главную страницу сайта example.com</a></li>
 			<li><a href="https://example.com">Абсолютная на главную сайта example.com в протоколе https</a></li>
