--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
     	<title>Задание №2</title>
 	</head>
 	<body>
-		<div class="cap">
-			
-		</div>
+		<header>
+			<div class="cap">
+				<img class="logo" src="img/logo.png" />
+				<div id="name-header">Бутовский - официальный сайт</div>
+
+			</div>
+		</header>
+		
+		
+		<div class="content">
+				<nav>
+					<a href="">Портфолио</a>
+					<a href="">Услуги</a>
+					<a href="">Прайс</a>
+					<a href="">Контакты</a>
+				</nav>
+
 		<ol>
 			<li><a href="http://example.com">Абсолютная гиперссылка на главную страницу сайта example.com</a></li>
 			<li><a href="https://example.com">Абсолютная на главную сайта example.com в протоколе https</a></li>
@@ -46,7 +60,8 @@
         	<li><a href="/2/first/str.html">Относительная ссылка на страницу в каталоге двумя уровнями выше</a></li>
         	<li><a href="/">Сокращенная ссылка на главную</a></li>
         	<li><a href="/str.html">Сокращенная ссылка на внутреннюю</a></li></br>
-
+		</div>
+		<div class="form">
         	<h2>Форма</h2>
 
         	<form naction="/" method="post">
@@ -112,6 +127,9 @@
 
        			<input type="submit" value="Отправить" />
         	</form>
+        </div>
         </ol>
+
+        <footer>(C)Сергей Синица 2019</footer>
 	</body>
 </html>
