--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<div class="cap">
-				<img class="logo" src="img/logo.png" />
+				<img class="logo" src="img/Logo.png" />
 				<div id="name-header">Бутовский - официальный сайт</div>
 
 			</div>
