--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         	<li><a href="https://www.kubsu.ru/" rel="noindex">  Ссылка, запрещенная для индексации поисковиками</a></li>
         	<li>Пробная версия <a href="https://www.kubsu.ru/">контекстной ссылки</a> в тексте</li>
         	<li>Ссылка-изображение:</br>
-        		<a href="https://www.kubsu.ru/"><img src="https://vsthemes.org/uploads/posts/2017-10/1582030821_marble_vsthemes_ru-16.jpg" width="400" height="260" title="Ссылка-изображение"></a></li>
+        		<br><a href="https://www.kubsu.ru/"><img style="box-shadow: 0px 0px 15px rgba(0,0,0,0.6)" src="https://vsthemes.org/uploads/posts/2017-10/1582030821_marble_vsthemes_ru-16.jpg" width="400" height="260" title="Ссылка-изображение"></a></li></br>
         	<li>Ссылки из прямоугольных и круглых областей картинки:</br>
-				<map name = "click">
+				<br><map name = "click">
 					<area shape = "circle" coords="250, 130, 85" href="https://www.kubsu.ru/" title="Круг">
     				<area shape = "rect" coords="10,10,130,240" href="https://www.kubsu.ru/" title="Прямоугольник">
     			</map>
-				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP26SXVnGDLbtQGizpXaAZHO8FtDmmTp1RPV1f2vHU6xRTV9gmi7V_aspDt_sKemh3yuc&usqp=CAU" width="400" height="260" usemap="#click">
+				<img style="box-shadow: 0px 0px 15px rgba(0,0,0,0.6)" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP26SXVnGDLbtQGizpXaAZHO8FtDmmTp1RPV1f2vHU6xRTV9gmi7V_aspDt_sKemh3yuc&usqp=CAU" width="400" height="260" usemap="#click"></br>
    			</li>
         	<li><a href="/str.html">Относительная ссылка на страницу в текущем каталоге</a></li>
         	<li><a href="/about/str.html">Относительная ссылка на страницу в каталоге about</a></li>
