--- a/index.html
+++ b/index.html
@@ -148,6 +148,6 @@
         </div>
         </ol>
 
-        <footer>(C)Сергей Синица 2019</footer>
+        <footer>(C)Бутовский Данила 2021</footer>
 	</body>
 </html>
