--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     			</map>
 				<img style="box-shadow: 0px 0px 15px rgba(0,0,0,0.6)" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP26SXVnGDLbtQGizpXaAZHO8FtDmmTp1RPV1f2vHU6xRTV9gmi7V_aspDt_sKemh3yuc&usqp=CAU" width="400" height="260" usemap="#click"></br>
    			</li>
-        	<li><a href="/str.html">Относительная ссылка на страницу в текущем каталоге</a></li>
+        	<br><li><a href="/str.html">Относительная ссылка на страницу в текущем каталоге</a></li>
         	<li><a href="/about/str.html">Относительная ссылка на страницу в каталоге about</a></li>
         	<li><a href="/str.html">Относительная ссылка на страницу в каталоге уровнем выше текущего</a></li>
         	<li><a href="/2/first/str.html">Относительная ссылка на страницу в каталоге двумя уровнями выше</a></li>
