--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         		<label>
         			Дата рождения:</br>
-        			<input type="date" name="Birthday" />
+        			<input style="color:gray" type="date" name="Birthday" />
         		</label></br>
 
         		Пол:
@@ -130,14 +130,16 @@
         			4
         		</label><br />
 
-        		Сверхспособности:</br>
+        		<br>Сверхспособности:</br>
         		<select name="Super" multiple="multiple">
           			<option value="1" >Бессмертие</option>
           			<option value="2">Прохождение сквозь стены &nbsp</option>
         			<option value="3">Левитация</option>
+        			<option value="4">Быть Сергеем Синицей</option>
+        			<option value="5">Компилировать на бумаге</option>
        			</select></br>
 
-       			Биография:</br>
+       			<br>Биография:</br>
        			<textarea name="Life" cols="25" rows="4" placeholder="Расскажите о себе"></textarea></br>
 
        			<input type="checkbox" name="check" required>
