--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         		</label></br>
 
         		<label>
-        			Дата рождения:</br>
-        			<input style="color:gray" type="date" name="Birthday" />
+        			Дата рождения: 
+        			<input style="color:gray" type="date" name="Birthday" >Д.М.Г</input>
         		</label></br>
 
         		Пол:
