--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         		<label>
         			Дата рождения: 
-        			<input style="color:gray" type="date" name="Birthday" >Д.М.Г</input>
+        			<input style="color:gray" type="date" name="Birthday" />
         		</label></br>
 
         		Пол:
