--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		
 		
 			<nav>
-					<a href="">Портфолио</a>
-					<a href="">Услуги</a>
-					<a href="">Прайс</a>
-					<a href="">Контакты</a>
+					<a href="https://www.kubsu.ru/">Портфолио</a>
+					<a href="https://www.kubsu.ru/">Услуги</a>
+					<a href="https://www.kubsu.ru/">Прайс</a>
+					<a href="https://www.kubsu.ru/">Контакты</a>
 			</nav>
 		
 		<div class="content">
